--- a/css.css
+++ b/css.css
@@ -6,7 +6,7 @@
     margin-left: 30%;
     text-align: center;
  }
-#result{
+.result{
     height:7%;
     text-align: right;
     margin-top:2%;
@@ -29,4 +29,10 @@
 } 
 #main-result{
     text-align:right;
+}
+#clear{
+    margin-top:2% ; 
+    margin-bottom:2% ; 
+    width:40% ; 
+    font-size:120%
 }
